# RacialDotMap-Brazil

./: .env.example  .gitignore  README.md  censo_2010.md  censo_2022.md  cria_poligonos_2022.ipynb  cria_pontos_2022.ipynb  download_censo.ipynb  download_setores.ipynb  index.html  publica_dados.ipynb  pyproject.toml
code/: dotfile.py
code/dotmap/: dotmap.pde  globalmaptiles.pde  zoomlevel.txt
estudos_tematicos/: create_quadkey.ipynb  dotfile.py  dotmap.py  gera_pontos_cor_raca_2022.py  globalmaptiles.py  index.html  join.py  make_points_2022.py
estudos_tematicos/dotmap/: zoomlevel.txt
